--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   - flake8 --version && flake8
   - mkdir $HOME/.mantid && echo -e "UpdateInstrumentDefinitions.OnStartup=0\nCheckMantidVersion.OnStartup=0\n" > $HOME/.mantid/Mantid.user.properties &&
     python build_all_ui_files.py &&
-    nosetests -v --with-coverage --cover-min-percentage=85 --cover-package=presenters, models
+    nosetests -v --with-coverage --cover-min-percentage=85
 
 after_success:
   - coveralls
