point coverage to correct package

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
   # Build the UI files and run the nosetests
   - mkdir $HOME/.mantid && echo -e "UpdateInstrumentDefinitions.OnStartup=0\nCheckMantidVersion.OnStartup=0\n" > $HOME/.mantid/Mantid.user.properties &&
     python build_all_ui_files.py &&
-    nosetests -v --with-coverage --cover-min-percentage=85
+    nosetests -v --with-coverage --cover-min-percentage=85 --cover-package=models
 
 after_success:
   - coveralls
