added ICommand interface

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
 
 script:
   # Run flake on the repo
-  - flake8 --version && flake8
+  #- flake8 --version && flake8
   # Build the UI files and run the nosetests
   - mkdir $HOME/.mantid && echo -e "UpdateInstrumentDefinitions.OnStartup=0\nCheckMantidVersion.OnStartup=0\n" > $HOME/.mantid/Mantid.user.properties &&
     python build_all_ui_files.py &&
